Add response time header

--- a/dummy_flask/templates/base.jinja
+++ b/dummy_flask/templates/base.jinja
@@ -28,6 +28,9 @@
     code {
       font-size: 1rem;
     }
+    img {
+
+    }
   </style>
 </head>
 <body>
@@ -39,6 +42,8 @@
     <code>{{ rule|e }}</code>
     <br><br>
     {% endfor %}
+
+    <img src="/api/766x388/cef/555/webp/?text=Hello" alt="">
   </div>
 
 </body>
