--- a/dummy_flask/static/styles.css
+++ b/dummy_flask/static/styles.css
@@ -9,15 +9,45 @@ html {
 
 .content {
   width: 100%;
-  /* margin-left: auto; */
-  /* margin-right: auto; */
 }
+
 .content h1 {
   margin-bottom: 3rem;
 }
+
+.image-container {
+  margin-bottom: 1.5rem;
+}
+
+#endpoint:hover {
+  text-decoration: underline;
+}
+
+.feather-copy {
+  width: 1em;
+  height: 1em;
+  display: inline-flex;
+  align-self: center;
+  top: 0.13em;
+  cursor: pointer;
+  position: relative;
+  vertical-align: baseline;
+  margin-left: 0.33em;
+}
+
+#params-form {
+  width: 100%;
+  border: 1px solid #e9ecef;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.1em 0;
+}
+
 code {
   font-size: 1rem;
 }
+
 img {
   margin: 0.5rem auto 1.5rem;
 }
