A little more text.

--- a/dummy_flask/core/templates/base.jinja
+++ b/dummy_flask/core/templates/base.jinja
@@ -19,6 +19,7 @@
 
     <p>
       Ever needed to create some placeholder images?
+      Here's an easy way to do that.
     </p>
 
     <h2>Images Created: {{ count }}</h2>
