--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 html {
   padding: 1em;
-}
-@media (min-width: 34em) {
-  html {
+  @media (min-width: 34em) {
     padding: 1em calc(45% - 17em);
   }
 }
@@ -10,16 +8,17 @@ html {
 .content {
   border: 1px solid #e9ecef;
   padding: 0 1em;
-}
-
-@media (max-width: 992px) {
-  .content {
-    padding: 0 0.2em;
+  @media (max-width: 992px) {
+    .content {
+      padding: 0 0.2em;
+    }
   }
 }
 
-.content h1 {
-  margin-bottom: 1.5rem;
+.content {
+  h1 {
+    margin-bottom: 1.5rem;
+  }
 }
 
 .image-container {
