Convert JavaScript to TypeScript.

--- a/dummy_flask/templates/css.html
+++ b/dummy_flask/templates/css.html
@@ -1,1 +1,4 @@
-<link rel="stylesheet" href="/static/dist/sanitize.1ae8b877.css"><link rel="stylesheet" href="/static/dist/typography.ca946ece.css"><link rel="stylesheet" href="/static/dist/forms.a9f68d26.css"><link rel="stylesheet" href="/static/dist/styles.17222e3a.css">
+<link rel="stylesheet" href="/static/dist/sanitize.edbf604d.css">
+<link rel="stylesheet" href="/static/dist/typography.ca042a23.css">
+<link rel="stylesheet" href="/static/dist/forms.d14d25fb.css">
+<link rel="stylesheet" href="/static/dist/styles.b86aecca.css">
