--- a/dummy_flask/core/templates/base.jinja
+++ b/dummy_flask/core/templates/base.jinja
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default"></script>
+  <script
+    crossorigin="anonymous"
+    src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default">
+  </script>
   {% include "css.html" %}
   <title>Image Stats</title>
 
@@ -19,7 +22,7 @@
     <h2>Images Created: {{ count }}</h2>
 
     <div class="image-container">
-      <img id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
+      <img crossorigin="anonymous" id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
       <code id="endpoint">{{ img_url }}?{{ img_query }}</code>
       <button id="copy-button" data-clipboard-text="{{ img_url }}?{{ img_query }}">
         <i
