--- a/dummy_flask/core/templates/base.jinja
+++ b/dummy_flask/core/templates/base.jinja
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script
     crossorigin="anonymous"
     src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default">
   </script>
-  {% include "css.html" %}
-  <title>Image Stats</title>
 
+  {% include "css.html" %}
+  <title>Another Placeholder Image Generator</title>
+  <meta name="description" content="A site that can generate a variety of images.">
 </head>
 <body>
   <main class="content">
@@ -22,7 +25,7 @@
     <h2>Images Created: {{ count }}</h2>
 
     <div class="image-container">
-      <img crossorigin="anonymous" id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
+      <img id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
       <code id="endpoint">{{ img_url }}?{{ img_query }}</code>
       <button id="copy-button" data-clipboard-text="{{ img_url }}?{{ img_query }}">
         <i
