--- a/dummy_flask/core/templates/base.jinja
+++ b/dummy_flask/core/templates/base.jinja
@@ -15,73 +15,98 @@
 </head>
 <body>
   <main class="content">
-    <h1>Placeholder Image Generator</h1>
+    <div class="row">
+      <h1>Placeholder Image Generator</h1>
+    </div>
+    <div class="row">
+      <p>
+        Ever needed to create some placeholder images?
+        Here's an easy way to do that.
+      </p>
+    </div>
 
-    <p>
-      Ever needed to create some placeholder images?
-      Here's an easy way to do that.
-    </p>
-
-    <h2>Images Created: {{ count }}</h2>
+    <div class="row">
+      <h2>Images Created: <span id="img-count">{{ count }}</span></h2>
+    </div>
 
     <div class="image-container">
-      <img id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
-      <code id="endpoint">{{ img_url }}?{{ img_query }}</code>
-      <button
-        id="copy-button"
-        data-clipboard-text="{{ img_url }}?{{ img_query }}"
-        aria-label="Copied to clipboard!"
-      >
-        <i
-          data-feather="copy"
-          title="Copy to clipboard."
-        ></i>
-        <i data-feather="check" title="Copied" style="display: none;"></i>
-      </button>
+      <div class="row">
+        <img id="example-image" src="{{ img_url }}?{{ img_query }}" alt="Example image.">
+      </div>
+
+      <div class="row">
+        <code id="endpoint">{{ img_url }}?{{ img_query }}</code>
+        <button
+          id="copy-button"
+          data-clipboard-text="{{ img_url }}?{{ img_query }}"
+          aria-label="Copied to clipboard!"
+        >
+          <i
+            data-feather="copy"
+            title="Copy to clipboard."
+          ></i>
+          <i data-feather="check" title="Copied" style="display: none;"></i>
+        </button>
+      </div>
     </div>
 
 
     <form id="params-form" action="">
-      <label for="width">Width</label>
-      <input id="width" type="number" min="1" step="1" value="{{ width }}">
-
-      <label for="height">Height</label>
-      <input id="height" type="number" min="1" step="1" value="{{ height }}">
-
-      <label for="bg">Background Color</label>
-      <input id="bg" type="text" value="{{ bg_color }}" pattern="{{ color_pattern }}">
-      <small class="help-text">Three or six hex digits.</small>
-
-      <label for="fg">Text Color</label>
-      <input id="fg" type="text" value="{{ fg_color }}" pattern="{{ color_pattern }}">
-      <small class="help-text">Three or six hex digits.</small>
-
-
-      <label for="fmt">Format</label>
-      <select name="fmt" id="fmt">
-        {% for value in img_formats %}
-        {% if value == fmt %}
-        <option selected value="{{ value }}">{{ value }}</option>
-        {% else %}
-        <option value="{{ value }}">{{ value }}</option>
-        {% endif %}
-        {% endfor %}
-      </select>
-      <small class="help-text">&lsquo;jpg&rsquo; and &lsquo;jpeg&rsquo; are equivalent.</small>
-
-      <label for="font">Font</label>
-      <select name="font" id="font">
-        {% for value, name in font_names %}
-        {% if value == font %}
-        <option selected value="{{ value }}">{{ name }}</option>
-        {% else %}
-        <option value="{{ value }}">{{ name }}</option>
-        {% endif %}
-        {% endfor %}
-      </select>
-
-      <label for="imageText">Text</label>
-      <input id="imageText" type="text" value="{{ text }}" maxlength="30">
+      <div class="form-group">
+        <label for="width">Width</label>
+        <input id="width" type="number" min="1" step="1" value="{{ width }}">
+      </div>
+      <div class="form-group">
+        <label for="height">Height</label>
+        <input id="height" type="number" min="1" step="1" value="{{ height }}">
+      </div>
+      <div class="form-group">
+        <label for="bg">Background Color</label>
+        <div class="input-group">
+          <input id="bg" type="text" value="{{ bg_color }}" pattern="{{ color_pattern }}">
+          <small class="help-text">Three or six hex digits.</small>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="fg">Text Color</label>
+        <div class="input-group">
+          <input id="fg" type="text" value="{{ fg_color }}" pattern="{{ color_pattern }}">
+          <small class="help-text">Three or six hex digits.</small>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="fmt">Format</label>
+        <div class="input-group">
+          <select name="fmt" id="fmt">
+            {% for value in img_formats %}
+            {% if value == fmt %}
+            <option selected value="{{ value }}">{{ value }}</option>
+            {% else %}
+            <option value="{{ value }}">{{ value }}</option>
+            {% endif %}
+            {% endfor %}
+          </select>
+          <small class="help-text">&lsquo;jpg&rsquo; and &lsquo;jpeg&rsquo; are equivalent.</small>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="font">Font</label>
+        <div class="input-group">
+          <select name="font" id="font">
+            {% for value, name in font_names %}
+            {% if value == font %}
+            <option selected value="{{ value }}">{{ name }}</option>
+            {% else %}
+            <option value="{{ value }}">{{ name }}</option>
+            {% endif %}
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="imageText">Text</label>
+        <input id="imageText" type="text" value="{{ text }}" maxlength="30">
+      </div>
     </form>
 
 
@@ -95,17 +120,24 @@
       {% endfor %}
     </div>
   </main>
-  <footer>
-    <h6>Licenses</h6>
-    <span>Fira Mono, Fira Sans, Overpass, and Spectral are licensed under the <a href="{{ url_for('static', filename='licenses/ofl.txt') }}">Open Font License</a>.</span>
-    <br>
-    <span>Roboto is licensed under the <a href="{{ url_for('static', filename='licenses/apache.txt') }}">Apache License</a>.</span>
-    <br><br>
-    <h6>Powered by <a href="https://palletsprojects.com/p/flask/">Flask</a></h6>
-    <h6>And <a href="https://heroku.com">Heroku</a></h6>
-    <br>
-    <h6>Created by Michael Van Wickle</h6>
-  </footer>
+  <div class="row">
+    <footer>
+      <div class="footer-group">
+        <h6>Licenses</h6>
+        <div>Fira Mono, Fira Sans, Overpass, and Spectral are licensed under the <a href="{{ url_for('static', filename='licenses/ofl.txt') }}">Open Font License</a>.</div>
+        <div>Roboto is licensed under the <a href="{{ url_for('static', filename='licenses/apache.txt') }}">Apache License</a>.</div>
+      </div>
+      <div class="footer-group">
+        <h6>Powered by <a href="https://palletsprojects.com/p/flask/">Flask</a></h6>
+        <h6>And <a href="https://heroku.com">Heroku</a></h6>
+      </div>
+      <div class="footer-group">
+        <h6>Created by Michael Van Wickle</h6>
+        <h6>Version: <code>{{ version }}</code></h6>
+      </div>
+    </footer>
+  </div>
+
   {% include "js.html" %}
 </body>
 </html>
