--- a/dummy_flask/templates/index.html
+++ b/dummy_flask/templates/index.html
@@ -90,6 +90,10 @@
       <label for="imageText">Text</label>
       <input id="imageText" type="text" value="{{ text }}" maxlength="30">
     </div>
+    <div class="form-group">
+      <label for="seed">Seed</label>
+      <input id="seed" type="text">
+    </div>
   </form>
 
 
