update dat favicon

--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -96,6 +96,10 @@
     </div>
   </form>
 
+  <div id="color-picker">
+
+  </div>
+
   <div id="routes">
     <h3>Routes:</h3>
     {% for rule in rules %}
