handle redis not existing

--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -26,10 +26,10 @@
         aria-label="Copied to clipboard!"
       >
         <i
-          data-feather="copy"
+          data-icon="copy"
           title="Copy to clipboard."
         ></i>
-        <i class="d-none" data-feather="check" title="Copied"></i>
+        <i class="d-none" data-icon="check" title="Copied"></i>
       </button>
     </div>
   </div>
