--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -1,6 +1,6 @@
 <main class="content">
   <div class="row justify-content-center text-row">
-    <h1>Placeholder Image Generator</h1>
+    <h1>{{ title }}</h1>
   </div>
   <div class="row justify-content-center text-row">
     <p>
