fiddling with vendoring

--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -34,6 +34,14 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="form-group">
+      <label for="expand-form">Expand Form</label>
+      <input id="expand-form" type="checkbox">
+    </div>
+
+  </div>
+
   <form id="params-form" action="">
     <div class="form-group">
       <label for="width">Width</label>
