--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,11 +14,4 @@
 @import "./theme/fonts";
 @import "./theme/theme";
 
-/* TODO: Vendor stuff isn't working. */
-@import "../../node_modules/sanitize.css/sanitize.css";
-@import "../../node_modules/sanitize.css/forms.css";
-@import "../../node_modules/tippy.js/dist/backdrop.css";
-@import "../../node_modules/tippy.js/dist/svg-arrow.css";
-@import "../../node_modules/tippy.js/themes/light.css";
-@import "../../node_modules/tippy.js/themes/light-border.css";
-@import "../../node_modules/tippy.js/animations/shift-away.css";
+@import "./vendor";
