CLI updates (version bumping)

--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row d-none">
     <div class="form-group">
       <label for="expand-form">Expand Form</label>
       <input id="expand-form" type="checkbox">
