--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,7 +23,7 @@ samp {
 .content {
   border: 1px solid #e9ecef;
   padding: 0 1rem 1rem;
-  @media (max-width: 992px) {
+  @include mq($until: "lg") {
     padding: 0 0.2rem;
   }
   h1 {
@@ -40,7 +40,7 @@ samp {
 
 code {
   font-size: 1em;
-  @media (max-width: 1200px) {
+  @include mq($until: "lg") {
     font-size: calc(0.5em + 0.7vw);
   }
 }
