--- a/holdmypics/templates/index.html
+++ b/holdmypics/templates/index.html
@@ -122,8 +122,8 @@
         <p>
           <!-- <code class="rule">&lt;bg_color&gt;&nbsp;⟶&nbsp;width&times;height|</code> -->
           <!-- <code class="rule">&lt;fg_color&gt;&nbsp;⟶&nbsp;width&times;height</code> -->
-          <code class="rule">&lt;size&gt;&nbsp;⟶&nbsp;width&times;height&nbsp;</code>
-          <code class="rule">&lt;size&gt;&nbsp;⟶&nbsp;length</code>
+          <code class="rule">&lt;size&gt;&nbsp;=&nbsp;width&times;height&nbsp;</code>
+          <code class="rule">&lt;size&gt;&nbsp;=&nbsp;side</code>
         </p>
       </small>
     </div>
