--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,7 +2,7 @@ $mq-breakpoints: (
   xs: 0,
   sm: 550px,
   md: 768px,
-  lg: 992px
+  lg: 992px,
 );
 
 @import "../../../node_modules/sass-mq/mq";
