Just styling changes

--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -88,7 +88,7 @@
           {% endif %}
           {% endfor %}
         </select>
-        <small class="help-text">&lsquo;jpg&rsquo; and &lsquo;jpeg&rsquo; are equivalent.</small>
+        <small class="help-text">“jpg” and “jpeg” are equivalent.</small>
       </div>
     </div>
     <div class="form-group">
@@ -142,8 +142,8 @@
 <div class="row">
   <footer>
     <div class="footer-group">
-      <h6>Powered by <a href="https://palletsprojects.com/p/flask/">Flask</a></h6>
-      <h6>And <a href="https://heroku.com">Heroku</a></h6>
+      <h6>Powered by <a href="https://palletsprojects.com/p/flask/" target="_blank" rel="noreferrer noopener">Flask</a></h6>
+      <h6>And <a href="https://heroku.com" target="_blank" rel="noreferrer noopener">Heroku</a></h6>
     </div>
     <div class="footer-group">
       <div>
@@ -153,7 +153,7 @@
     </div>
     <div class="footer-group">
       <h6>Created by Michael Van Wickle</h6>
-      <h6>Version: <code>{{ version }}</code></h6>
+      <h6>Version: <code><a href="https://github.com/mvwicky/holdmypics/tree/v{{ version }}" target="_blank" rel="noreferrer noopener">{{ version }}</a></code></h6>
     </div>
   </footer>
 </div>
