--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,7 +1,7 @@
 html {
   padding: 1em;
-  @media (min-width: 34em) {
-    padding: 1em calc(40% - 17em);
+  @include mq($from: "sm") {
+    padding: 1rem calc(40% - 17rem);
   }
 }
 
@@ -22,9 +22,10 @@ samp {
 
 .content {
   border: 1px solid #e9ecef;
+  margin-bottom: 1.5rem;
   padding: 0 1rem 1rem;
   @include mq($until: "lg") {
-    padding: 0 0.2rem;
+    padding: 0 0.25rem;
   }
   h1 {
     margin-bottom: 1.5rem;
@@ -36,13 +37,6 @@ samp {
   flex-direction: row;
   width: 100%;
   justify-content: center;
-}
-
-code {
-  font-size: 1em;
-  @include mq($until: "lg") {
-    font-size: calc(0.5em + 0.7vw);
-  }
 }
 
 img {
