--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,9 +1,8 @@
 .feather {
-  width: 1em;
-  height: 1em;
+  width: var(--feather-size, 1em);
+  height: var(--feather-size, 1em);
   align-self: center;
   bottom: 0.1em;
-  // cursor: pointer;
   position: relative;
   vertical-align: middle;
   margin-left: 0.1em;
@@ -12,7 +11,6 @@
 
 #copy-button {
   border-radius: 5px;
-  margin-left: 0.33em;
   width: 2rem;
   height: 2rem;
   &:disabled {
