--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,17 +1,23 @@
 footer {
   border: 1px solid #e9ecef;
-  margin: 2.5em 0 0.5em;
-  padding: 1em 1em 0.5em;
+  margin: 1.5rem 0;
+  padding: 1rem;
   text-align: center;
-  width: 80%;
+  width: 100%;
   .footer-group {
-    padding-bottom: 1em;
+    padding-bottom: 1rem;
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
   div {
-    font-size: 0.7rem;
+    @include font-scale(-1);
   }
   h6 {
-    font-size: 0.75rem;
+    @include font-scale(0);
     margin: 0.5rem;
+    &:last-child {
+      margin-top: 0;
+    }
   }
 }
