--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 0.8em;
+  margin-bottom: 0.5rem;
   flex-wrap: wrap;
   @include mq($from: "md") {
     flex-direction: row;
@@ -10,7 +10,7 @@
 
   label {
     flex-grow: 0;
-    margin-bottom: 0.25em;
+    margin-bottom: 0.25rem;
     @include mq($from: "md") {
       margin-bottom: 0;
     }
@@ -26,13 +26,9 @@
 }
 
 input {
-  // width: 100%;
   border-radius: 3px;
-
-  --validity-color: rgb(204, 204, 204);
-  --validity-shadow: none;
-  border: 1px solid var(--validity-color);
-  box-shadow: var(--validity-shadow);
+  border: 1px solid var(--validity-color, rgb(204, 204, 204));
+  box-shadow: var(--validity-shadow, none);
   &:invalid {
     --validity-color: rgba(240, 0, 0, 0.8);
     --validity-shadow: 0 0 5px 1px var(--validity-color);
