--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -22,7 +22,14 @@ $h-spacing: 5rem;
 }
 
 #routes {
-  padding-bottom: 1em;
+  padding-bottom: 1rem;
+  h3 {
+    margin-block-end: 0;
+    margin-bottom: 0.5rem;
+  }
+  p {
+    margin-block-start: 0;
+  }
 }
 
 .image-container {
