--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,8 +1,3 @@
-@import "../../node_modules/sanitize.css/sanitize.css";
-@import "../../node_modules/sanitize.css/forms.css";
-
-@import "../../node_modules/tippy.js/dist/backdrop.css";
-@import "../../node_modules/tippy.js/dist/svg-arrow.css";
-@import "../../node_modules/tippy.js/themes/light.css";
-@import "../../node_modules/tippy.js/themes/light-border.css";
-@import "../../node_modules/tippy.js/animations/shift-away.css";
+@import "./vendor/pattern";
+@import "./vendor/sanitize";
+@import "./vendor/tippy";
