--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./abstracts/mixins";
 
 @import "./base/base";
+@import "./base/root";
 
 @import "./components/buttons";
 @import "./components/flex";
